@@ -70,7 +70,8 @@ class FirePHP {
                           array(array(true,array('REQUEST','$_GET'),$_GET),
                                 array(true,array('REQUEST','$_POST'),$_POST),
                                 array(true,array('REQUEST','$_COOKIE'),$_COOKIE),
-                                array(true,array('REQUEST','$_SERVER'),$_SERVER)
+                                array(true,array('REQUEST','$_SERVER'),$_SERVER),
+                                array(true,array('SESSION','$_SESSION'),$_SESSION)
                                )
                       );    
     }
